@@ -222,6 +222,12 @@ task runProviderPactVerification(type: Test) {
     classpath = sourceSets.contractTest.runtimeClasspath
 }
 
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
 runProviderPactVerification.dependsOn contractTest
 
 runProviderPactVerification.finalizedBy pactVerify
@@ -395,6 +401,7 @@ dependencies {
     testImplementation group: 'org.codehaus.groovy', name: 'groovy', version: '2.5.14'
     testImplementation group: 'org.codehaus.groovy', name: 'groovy-xml', version: '2.5.14'
     testImplementation group: 'org.codehaus.groovy', name: 'groovy-json', version: '2.5.14'
+    testCompile 'com.github.hmcts:fortify-client:1.2.0:all'
 
     contractTestImplementation(group: 'au.com.dius', name:'pact-jvm-consumer-junit5_2.12', version: versions.pact_version) {
         endorseStrictVersions()
